--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div id="navbar"> 
                 <div> <a href="index.html"> Home </a> </div>
                 <div> <a href="http://www.google.com"> Quem Somos </a> </div>
-                <div>Contato</div>
-                <div>Fique Por Dentro</div>
+                <div> <a href="contato.html"> Contato </a></div>
+                <div> <a href="blog.html"> Fique Por Dentro </a></div> 
             </div>
 
             <div id="imagemGeral">
@@ -28,19 +28,19 @@
 
             <div id="produtos"> 
                 <div class="produtoDestaque">
-                    <img src="imagens/dogbonitao.webp" width="20%"> 
+                    <img id="imgDog" src="imagens/cao_verao.jpg"> 
                     <h3> $10.00</h3>
                     <p>O dog fica da frente com oculos de vermelho e nariz preta, orelhas em cima e uma corda de pescoço de carnaval </p>
                 </div> 
                 
                 <div class="produtoDestaque">
-                    <img src="imagens/doglingua.jpg" width="20%" height="40%"> 
+                    <img src="imagens/doglingua.jpg" > 
                     <h3> $20.00</h3>
                     <p> O dog com toda marrom e uma lingua de fora</p>
                 </div>
                 
-                <div class="produtoDestaque"></div>
-                    <img src="imagens/dogs.jpg" width="20%" height="40%"> 
+                <div class="produtoDestaque">
+                    <img src="imagens/dogs.jpg" > 
                     <h3> $30.00</h3>
                     <p>Tem dois dog's, um fica sentada da cabeça em baixo e um dog fica deitada olhando em cima (nos olhares)</p>
                 </div>
