--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> .: Minha lojinha na internet :. </title>
-        <link rel="stylesheet" href="estilonatal.css">
+        <link rel="stylesheet" href="css/estilonatal.css">
     </head>
 
     <body>
